# DSPy-RLM_with_GEPA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  literature_review.md
examples/: demo_questions.jsonl
examples/demo_corpus/: agentic_rag.md  climate_infrastructure.md  clinical_trials.md  evidence_ledger.md  fusion_and_eval.md  incident_response.md  modern_sources.md  software_delivery.md
scripts/: run_local_smoke.sh  run_openai_compatible_e2e.sh
src/rlm_gepa_retrieval/: __init__.py  agents.py  cli.py  environment.py  eval.py  metrics.py  openai_compatible.py  optimize_gepa.py  pipeline.py  programs.py  report.py  retrieval.py  schemas.py  tasks.py
tests/: test_cli.py  test_environment.py  test_generation.py  test_metrics.py  test_openai_compatible.py  test_programs.py  test_smoke.py
